--- a/index.html
+++ b/index.html
@@ -1,6 +1,35 @@
 ---
 layout: default
 ---
+<!-- Corousel -->
+<div class="carousel carousel-slider center" data-indicators="true">
+  <!--
+  <div class="carousel-fixed-item center">
+    <a class="btn waves-effect white grey-text darken-text-2">acceder</a>
+  </div>
+-->
+  <div class="carousel-item red white-text" href="#one!">
+    <h2>Novedades</h2>
+    <p class="white-text">This is your first panel</p>
+    <a class="btn waves-effect white grey-text darken-text-2" href="http://uaparty.ml/" style="margin-top: 180px;">acceder</a>
+  </div>
+  <div class="carousel-item amber white-text" href="#two!">
+    <h2>Bares</h2>
+    <p class="white-text">This is your second panel</p>
+    <a class="btn waves-effect white grey-text darken-text-2" href="http://uaparty.ml/bares/" style="margin-top: 180px;">acceder</a>
+  </div>
+  <div class="carousel-item green white-text" href="#three!">
+    <h2>Cócteles</h2>
+    <p class="white-text">This is your third panel</p>
+    <a class="btn waves-effect white grey-text darken-text-2" href="http://uaparty.ml/cocteles/" style="margin-top: 180px;">acceder</a>
+  </div>
+  <div class="carousel-item blue white-text" href="#four!">
+    <h2>Juegos</h2>
+    <p class="white-text">This is your fourth panel</p>
+    <a class="btn waves-effect white grey-text darken-text-2" href="http://uaparty.ml/juegos/" style="margin-top: 180px;">acceder</a>
+  </div>
+</div>
+
 <div class="container">
     <div class="group-article">
         <div class="row no-margin">
@@ -9,7 +38,7 @@ layout: default
                 <div class="divider"></div>
             </div>
         </div>
-        
+
         {% for post in paginator.posts %}
         <div class="row no-margin">
             <a class="waves-effect" href="{{ post.url | prepend: site.baseurl }}">
@@ -18,7 +47,7 @@ layout: default
                         <h4 class="blue-text thin">{{ post.title }}</h4>
                         <p class="grey-text text-darken-1 light">Published at {{ post.date | date: "%B %-d, %Y" }}.</p>
                         <article class="grey-text text-darken-2 post-content on-index light">
-                                {{ post.excerpt | strip_html }}. . 
+                                {{ post.excerpt | strip_html }}. .
                         </article>
                         <br/>
                     </div>
