Posts with card look

--- a/index.html
+++ b/index.html
@@ -1,63 +1,62 @@
 ---
 layout: default
 ---
-<!-- Corousel -->
+<!-- Carousel -->
 <div class="carousel carousel-slider center" data-indicators="true">
-  <!--
-  <div class="carousel-fixed-item center">
-    <a class="btn waves-effect white grey-text darken-text-2">acceder</a>
-  </div>
--->
   <div class="carousel-item red white-text" href="#one!">
     <h2>Novedades</h2>
     <p class="white-text">This is your first panel</p>
-    <a class="btn waves-effect white grey-text darken-text-2" href="http://uaparty.ml/" style="margin-top: 180px;">acceder</a>
+    <a class="btn waves-effect white grey-text darken-text-2" href="" style="margin-top: 180px;">acceder</a>
   </div>
   <div class="carousel-item amber white-text" href="#two!">
     <h2>Bares</h2>
     <p class="white-text">This is your second panel</p>
-    <a class="btn waves-effect white grey-text darken-text-2" href="http://uaparty.ml/bares/" style="margin-top: 180px;">acceder</a>
+    <a class="btn waves-effect white grey-text darken-text-2" href="/bares/" style="margin-top: 180px;">acceder</a>
   </div>
   <div class="carousel-item green white-text" href="#three!">
     <h2>Cócteles</h2>
     <p class="white-text">This is your third panel</p>
-    <a class="btn waves-effect white grey-text darken-text-2" href="http://uaparty.ml/cocteles/" style="margin-top: 180px;">acceder</a>
+    <a class="btn waves-effect white grey-text darken-text-2" href="/cocteles/" style="margin-top: 180px;">acceder</a>
   </div>
   <div class="carousel-item blue white-text" href="#four!">
     <h2>Juegos</h2>
     <p class="white-text">This is your fourth panel</p>
-    <a class="btn waves-effect white grey-text darken-text-2" href="http://uaparty.ml/juegos/" style="margin-top: 180px;">acceder</a>
+    <a class="btn waves-effect white grey-text darken-text-2" href="/juegos/" style="margin-top: 180px;">acceder</a>
   </div>
 </div>
 
 <div class="container">
-    <div class="group-article">
-        <div class="row no-margin">
-            <div class="col s12">
-                <h2 class="blue-text center-align thin">Recent Post</h2>
-                <div class="divider"></div>
-            </div>
-        </div>
-
-        {% for post in paginator.posts %}
-        <div class="row no-margin">
-            <a class="waves-effect" href="{{ post.url | prepend: site.baseurl }}">
-                <div class="col s12">
-                    <div class="list-article">
-                        <h4 class="blue-text thin">{{ post.title }}</h4>
-                        <p class="grey-text text-darken-1 light">Published at {{ post.date | date: "%B %-d, %Y" }}.</p>
-                        <article class="grey-text text-darken-2 post-content on-index light">
-                                {{ post.excerpt | strip_html }}. .
-                        </article>
-                        <br/>
-                    </div>
-                    <div class="divider dashed"></div>
-                </div>
-            </a>
-        </div>
-        {% endfor %}
-
+  <div class="group-article">
+    <div class="row no-margin">
+      <div class="col s12">
+        <h2 class="blue-text center-align thin">Novedades</h2>
+        <div class="divider"></div>
+      </div>
     </div>
+
+    {% for post in paginator.posts %}
+    <a href="{{ post.url | prepend: site.baseurl }}">
+      <div class="row">
+        <div class="col s12 m12">
+          <div class="card waves-effect">
+            <div class="img-wrap card-image" style="height:50%;max-height:300px;overflow:hidden;">
+              <img src="{{ post.imageURL }}" alt="{{ post.title }}" class="borroso">
+              <span class="card-title">{{ post.title }}</span>
+            </div>
+            <div class="card-content">
+              <p class="grey-text text-darken-1 light fetxa-tarjeta">Publicado el {{ post.date | date: "%d/%m/%Y" }}.</p>
+              <p class="grey-text text-darken-2 light">{{ post.excerpt | strip_html }}</p>
+            </div>
+            <div class="card-action">
+              <a class="blue-text" href="{{ post.url | prepend: site.baseurl }}">Continuar leyendo</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </a>
+    {% endfor %}
+  </div>
 
     <div class="section">
 
