--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
     <div class="row no-margin">
       <div class="col s12">
         <h2 class="blue-text center-align thin">Novedades</h2>
-        <div class="divider"></div>
+        <div class="divider marra-horizontala"></div>
       </div>
     </div>
 
