Revert "Initial commit to the cocktail page"
This reverts commit 74510a5df809a948d7239cdce9c3f5e136f48d2a.

# Conflicts:
#	_site/cocteles/blackrussian/index.html
#	_site/cocteles/bloddymary/index.html
#	_site/cocteles/cosmopolitan/index.html
#	_site/cocteles/daiquiri/index.html
#	_site/cocteles/drymartini/index.html
#	_site/cocteles/gimlet/index.html
#	_site/cocteles/gypsyqueem/index.html
#	_site/cocteles/index.html
#	_site/cocteles/maitai/index.html
#	_site/cocteles/manhattan/index.html
#	_site/cocteles/margarita/index.html
#	_site/feed.xml
#	cocktails.html

--- a/cocktails.html
+++ b/cocktails.html
@@ -3,9 +3,9 @@ layout: page_cocktails
 title: "Cócteles"
 permalink: /cocteles/
 ---
-<div class="row">
-  <div class="col s12 cards-container">
+<div class="section">
   {% for cocktail in site.cocktails %}
+  <div class="col s12 m6 l4">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
         <img class="activator" src="{{ cocktail.imageURL }}">
@@ -19,8 +19,8 @@ permalink: /cocteles/
         <p>{{ cocktail.excerpt | strip_html }}</p>
       </div>
     </div>
+  </div>
   {% endfor %}
-</div>
 </div>
 
 <!--<div class="row">
