--- a/juegos.html
+++ b/juegos.html
@@ -3,23 +3,24 @@ layout: page_cocktails
 title: Juegos
 permalink: /juegos/
 ---
-<div class="row">
+
+<div class="section">
   <div class="col s12 cards-container">
-    {% for cocktail in site.juegos %}
-    <div class="card">
+      {% for cocktail in site.juegos %}
+      <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="{{ cocktail.imageURL }}" alt="{{ cocktail.title }}">
+          <img class="activator" src="{{ cocktail.imageURL }}">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">{{ cocktail.title }}<i class="material-icons right">more_vert</i></span>
-          <p><a class="blue-text" href="{{ cocktail.url | prepend: site.baseurl }}">Más Info.</a></p>
+          <p><a class="blue-text" href="{{ cocktail.url | prepend: site.baseurl }}">Más info.</a></p>
         </div>
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4">{{ cocktail.title }}<i class="material-icons right">close</i></span>
           <p>{{ cocktail.excerpt | strip_html }}</p>
         </div>
-    </div>
-    {% endfor %}
+      </div>
+      {% endfor %}
   </div>
 </div>
 
