Updated submit post form & scrollspy implemented

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div id="car-one" class="carousel-item red white-text" href="#one!">
     <h2>Novedades</h2>
     <p class="white-text">Mantente informado</p>
-    <a class="btn waves-effect white blue-grey-text darken-text-3" href="" style="margin-top: 180px;">acceder</a>
+    <a class="btn waves-effect white blue-grey-text darken-text-3" href="#novedades" style="margin-top: 180px;">acceder</a>
   </div>
   <div id="car-two" class="carousel-item amber white-text" href="#two!">
     <h2>Bares</h2>
@@ -25,7 +25,7 @@ layout: default
   </div>
 </div>
 
-<div class="container">
+<div id="novedades" class="container section scrollspy">
   <div class="group-article">
     <div class="row no-margin">
       <div class="col s12">
