--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -9,9 +9,98 @@ layout: default
                 <div class="divider marra-cal"></div>
             </div>
         </div>
-        <p>
-        	escribo el texto aqui
-        	
-        </p>
+       <div class="row">
+            <div class="col s12 m3 l2">
+                <div class="card card-avatar">
+                    <div class="waves-effect waves-block waves-light">
+                        <a href="https://twitter.com/izadiegizabal"><img class="activator" src="assets/img/avatar1.jpg"></a>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Izadi Egizabal Alkorta<br/>
+                            <small><em><a class="red-text text-darken-1" href="https://twitter.com/izadiegizabal">CEO / Diseñador</a></em></small></span>
+                        <p>
+                            <a class="blue-text text-lighten-2" href="https://twitter.com/izadiegizabal">
+                           	 <i class="fa fa-twitter-square blue"></i>
+                            </a>
+                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/egizabalizadi">
+                                <i class="fa-facebook-square blue"></i>
+                            </a>
+                            <a class="blue-text text-lighten-2" href="https://www.instagram.com/izadiegizabal">
+                                <i class="fa fa-instagram blue"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m3 l2">
+                <div class="card card-avatar">
+                    <div class="waves-effect waves-block waves-light">
+                        <a href="http://hysteric-s.tumblr.com/"><img class="activator" src="img/avatar2.jpg"></a>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Alba Gonzalez Aller<br/>
+                            <small><em><a class="red-text text-darken-1" href="#">CFO / Diseñadora</a></em></small>
+                        </span>
+                        <p>
+                            <a class="blue-text text-lighten-2" href="https://twitter.com/sale_elalba">
+                                <i class="fa fa-twitter-square blue"></i>
+                            </a>
+                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/alba.gonzalezaller">
+                                <i class="fa-facebook-square blue"></i>
+                            </a>
+                            <a class="blue-text text-lighten-2" href="https://www.instagram.com/alba.g.aller/">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m3 l2">
+                <div class="card card-avatar">
+                    <div class="waves-effect waves-block waves-light">
+                        <a href="https://twitter.com/marcosaurios"><img class="activator" src="img/avatar3.jpg"></a>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">
+                            Claudia Cambra Mompó<br/>
+                            <small><em><a class="red-text text-darken-1" href="#">CIO / Diseñadora</a></em></small></span>
+                        <p>
+                            <a class="blue-text text-lighten-2" href="https://twitter.com/claudiacambra">
+                                <i class="fa fa-twitter-square blue"></i>
+                            </a>
+                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/claudia.cambramompo>
+                                <i class="fa-facebook-square blue"></i>
+                            </a>
+                            <a class="blue-text text-lighten-2" href="https://www.instagram.com/marcosaurios/">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m3 l2">
+                <div class="card card-avatar">
+                    <div class="waves-effect waves-block waves-light">
+                        <a href="https://twitter.com/marcosaurios"><img class="activator" src="img/avatar3.jpg"></a>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">
+                            Marcos Urios Gómez<br/>
+                            <small><em><a class="red-text text-darken-1" href="#">CIO / Diseñador</a></em></small></span>
+                        <p>
+                            <a class="blue-text text-lighten-2" href="https://twitter.com/marcosaurios">
+                                <i class="fa fa-twitter-square"></i>
+                            </a>
+                            <a class="blue-text text-lighten-2" href="https://plus.google.com/107139447059296555387">
+                                <i class="fa fa-google-plus-square"></i>
+                            </a>
+                            <a class="blue-text text-lighten-2" href="https://www.instagram.com/marcosaurios/">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
     </div>
