--- a/cocktails.html
+++ b/cocktails.html
@@ -3,12 +3,13 @@ layout: page_cocktails
 title: "Cócteles"
 permalink: /cocteles/
 ---
+
 <div class="section">
   {% for cocktail in site.cocktails %}
   <div class="col s12 m6 l4">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="{{ cocktail.imageURL }}">
+        <img class="activator" src="{{ cocktail.mini_imageURL }}">
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">{{ cocktail.title }}<i class="material-icons right">more_vert</i></span>
