--- a/cocktails.html
+++ b/cocktails.html
@@ -4,24 +4,24 @@ title: "Cócteles"
 permalink: /cocteles/
 ---
 
-<div class="section">
-  {% for cocktail in site.cocktails %}
-  <div class="col s12 m6 l4">
-    <div class="card">
-      <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="{{ cocktail.mini_imageURL }}">
+<div class="section cards-container">
+  <div class="col s12">
+      {% for cocktail in site.cocktails %}
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="{{ cocktail.mini_imageURL }}">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4 flow-text">{{ cocktail.title }}<i class="material-icons right">more_vert</i></span>
+          <p><a class="blue-text" href="{{ cocktail.url | prepend: site.baseurl }}">Más info.</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">{{ cocktail.title }}<i class="material-icons right">close</i></span>
+          <p>{{ cocktail.excerpt | strip_html }}</p>
+        </div>
       </div>
-      <div class="card-content">
-        <span class="card-title activator grey-text text-darken-4">{{ cocktail.title }}<i class="material-icons right">more_vert</i></span>
-        <p><a class="blue-text" href="{{ cocktail.url | prepend: site.baseurl }}">Ver Receta</a></p>
-      </div>
-      <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4">{{ cocktail.title }}<i class="material-icons right">close</i></span>
-        <p>{{ cocktail.excerpt | strip_html }}</p>
-      </div>
-    </div>
+      {% endfor %}
   </div>
-  {% endfor %}
 </div>
 
 <div class="section">
