--- a/juegos.html
+++ b/juegos.html
@@ -4,12 +4,12 @@ title: Juegos
 permalink: /juegos/
 ---
 
-<div class="section">
-  <div class="col s12 cards-container">
+<div class="section cards-container">
+  <div class="col s12">
       {% for cocktail in site.juegos %}
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="{{ cocktail.imageURL }}">
+          <img class="activator" src="{{ cocktail.mini_imageURL }}">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">{{ cocktail.title }}<i class="material-icons right">more_vert</i></span>
