Fixed some css and about us section

--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -24,18 +24,18 @@ layout: default
                     <div class="waves-effect waves-block waves-light">
                         <a href="https://twitter.com/izadiegizabal"><img class="responsive-img activator" src="../assets/img/avatar1.jpg"></a>
                     </div>
-                    <div class="card-content">
+                    <div class="card-content center">
                         <span class="card-title activator grey-text text-darken-4">Izadi Egizabal Alkorta<br/>
                             <small><em><a class="red-text text-darken-1" href="https://twitter.com/izadiegizabal"> Diseñador y Programador</a></em></small></span>
                         <p>
                             <a class="blue-text text-lighten-2" href="https://twitter.com/izadiegizabal">
-                           	 <i class="center-align fa fa-twitter-square fa-3x"></i>
+                           	 <i class="fa fa-twitter-square fa-2x"></i>
                             </a>
                             <a class="blue-text text-lighten-2" href="https://www.facebook.com/egizabalizadi">
-                                <i class="center-align fa fa-facebook-square fa-3x"></i>
+                                <i class="fa fa-facebook-square fa-2x"></i>
                             </a>
                             <a class="blue-text text-lighten-2" href="https://www.instagram.com/izadiegizabal">
-                                <i class="center-align fa fa-instagram fa-3x"></i>
+                                <i class="fa fa-instagram fa-2x"></i>
                             </a>
                         </p>
                     </div>
