--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -29,7 +29,7 @@ layout: default
                             <small><em><a class="red-text text-darken-1" href="https://twitter.com/izadiegizabal"> Diseñador y Programador</a></em></small></span>
                         <p>
                             <a class="blue-text text-lighten-2" href="https://twitter.com/izadiegizabal">
-                           	 <i class="fa fa-twitter-square fa-2x"></i>
+                             <i class="fa fa-twitter-square fa-2x"></i>
                             </a>
                             <a class="blue-text text-lighten-2" href="https://www.facebook.com/egizabalizadi">
                                 <i class="fa fa-facebook-square fa-2x"></i>
@@ -45,21 +45,21 @@ layout: default
             <div class="col s12 m6 l3">
                 <div class="card card-avatar">
                     <div class="waves-effect waves-block waves-light">
-                        <a href="https://twitter.com/sale_elalba"><img class="responsive-img activator" src="../img/avatar2.jpg"></a>
+                        <a href="https://twitter.com/sale_elalba"><img class="responsive-img activator" src="../img/alba.jpg"></a>
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Alba Gonzalez Aller<br/>
-                            <small><em><a class="red-text text-darken-1" href="#">Diseñadora y redactora</a></em></small>
+                        <span class="card-title activator grey-text text-darken-4">Alba González Aller<br/>
+                            <small><em><a class="red-text text-darken-1" href="https://twitter.com/sale_elalba">Diseñadora y redactora</a></em></small>
                         </span>
                         <p>
                             <a class="blue-text text-lighten-2" href="https://twitter.com/sale_elalba">
-                                <i class="fa fa-twitter-square blue"></i>
+                                <i class="fa fa-twitter-square fa-2x"></i>
                             </a>
                             <a class="blue-text text-lighten-2" href="https://www.facebook.com/alba.gonzalezaller">
-                                <i class="fa-facebook-square blue"></i>
+                                <i class="fa fa-facebook-square fa-2x"></i>
                             </a>
                             <a class="blue-text text-lighten-2" href="https://www.instagram.com/alba.g.aller/">
-                                <i class="fa fa-instagram blue"></i>
+                                <i class="fa fa-instagram fa-2x"></i>
                             </a>
                         </p>
                     </div>
@@ -73,16 +73,16 @@ layout: default
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Claudia Cambra Mompó<br/>
-                            <small><em><a class="red-text text-darken-1" href="#">Diseñadora y redactora</a></em></small></span>
+                            <small><em><a class="red-text text-darken-1" href="https://www.facebook.com/claudia.cambramompo">Diseñadora y redactora</a></em></small></span>
                         <p>
                             <a class="blue-text text-lighten-2" href="https://twitter.com/claudiacambra">
-                                <i class="fa fa-twitter-square blue"></i>
+                                <i class="fa fa-twitter-square fa-2x"></i>
                             </a>
                             <a class="blue-text text-lighten-2" href="https://www.facebook.com/claudia.cambramompo/">
-                                <i class="fa-facebook-square blue"></i>
+                                <i class="fa fa-facebook-square fa-2x"></i>
                             </a>
                             <a class="blue-text text-lighten-2 " href="https://www.instagram.com/claudiacambra/">
-                                <i class="fa fa-instagram blue"></i>
+                                <i class="fa fa-instagram fa-2x"></i>
                             </a>
                         </p>
                     </div>
@@ -99,13 +99,13 @@ layout: default
                             <small><em><a class="red-text text-darken-1" href="#">Diseñador y redactor</a></em></small></span>
                         <p>
                             <a class="blue-text text-lighten-2" href="https://twitter.com/antonio1elx">
-                                <i class="fa fa-twitter-square"></i>
+                                <i class="fa fa-twitter-square fa-2x"></i>
                             </a>
                             <a class="blue-text text-lighten-2" href="https://www.facebook.com/antonio.perezmas.3">
-                                <i class="fa-facebook-square blue"></i>
+                                <i class="fa fa-facebook-square fa-2x"></i>
                             </a>
                             <a class="blue-text text-lighten-2" href="https://www.instagram.com/antonio1elx/">
-                                <i class="fa fa-instagram blue"></i>
+                                <i class="fa fa-instagram fa-2x"></i>
                             </a>
                         </p>
                     </div>
